# Stream

./: .gitignore  LICENSE  README.md  pyproject.toml
stream/: __main__.py  cli.py  dataset.py  export.py  finetunning.py  generate.py  inference.py  prompt.yaml
stream/config/: config.py  stream_config.yaml
